# Projeto_Orientado_Objeto

./: CMakeLists.txt  CMakeLists.txt.user.87c69f7  Projeto_B_I.drawio  README.md  SorteReves.csv  baralho.cpp  baralho.h  botao.cpp  botao.h  carddisplay.cpp  carddisplay.h  casa.cpp  casa.h  config.cpp  config.h  config_Scene.cpp  config_Scene.h  images.qrc  item.cpp  item.h  jogador.cpp  jogador.h  jogadores.csv  jogoscene.cpp  jogoscene.h  main.cpp  mainwindow.cpp  mainwindow.h  menu_Scene.cpp  menu_Scene.h  resource.qrc  tab.csv  tabuleiro.cpp  tabuleiro.h
images/: botao.jfif  saida_livre.jfif
